fixed footer scrollbar, adjusted header spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,8 +77,8 @@ nav {
 
 .nav {
 	font-size: 18px;
-	padding-left: 32px;
-	padding-right: 32px;
+	padding-left: 5%;
+	padding-right: 5%;
 	/*border-left: 1px solid #60c8ff;
 	border-right: 1px solid #60c8ff;*/
 	margin: 10px;
@@ -97,7 +97,6 @@ footer {
 	height: 80px;
 	border-top: 1px solid gray;
 	padding-left: 32px;
-	overflow-y: scroll;
 }
 
 #footer-buffer {
